// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Login Page 1`] = `
<div
  className="box-layout"
>
  <div
    className="box-layout__box"
  >
    <h1
      className="box-layout__title"
    >
      Expensify-App
    </h1>
    <p>
      Its time to get your expenses under control.
    </p>
    <button
      className="button"
    >
      Login with Google
    </button>
  </div>
</div>
`;

exports[`should startLogin on button click 1`] = `
<div
  className="box-layout"
>
  <div
    className="box-layout__box"
  >
    <h1
      className="box-layout__title"
    >
      Expensify-App
    </h1>
    <p>
      Its time to get your expenses under control.
    </p>
    <button
      className="button"
      onClick={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
    >
      Login with Google
    </button>
  </div>
</div>
`;
